<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_insurance"
            android:title="@string/menu_insurance" />


        <item
            android:id="@+id/nav_ads"
            android:title="@string/menu_advertisement" />

        <item
            android:id="@+id/nav_bde_incentives"
            android:title="@string/menu_incentives" />

        <item
            android:id="@+id/nav_aboutUs"
            android:visible="false"
            android:title="@string/menu_aboutUs" />
<!--        <item-->
<!--            android:id="@+id/nav_mysubscription"-->
<!--            android:title="@string/menu_mysubscription" />-->
<!--        <item-->
<!--            android:id="@+id/nav_alloffers"-->
<!--            android:title="@string/menu_alloffers" />-->
<!--        <item-->
<!--            android:id="@+id/nav_helpandsettings"-->
<!--            android:title="@string/menu_helpandsettings" />-->
<!--        <item-->
<!--            android:id="@+id/nav_customerservice"-->
<!--            android:title="@string/menu_customerservice" />-->
<!--        <item-->
<!--            android:id="@+id/nav_guide"-->
<!--            android:title="@string/menu_guide" />-->
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />


    </group>






</menu>
